On each load, check the meta endpoint and update the menu with results  - b/c the current logic for getting updates doesn't work, check for updates on each language on each load too until a better solution is found

--- a/godtools/godtools-ios-api/config.plist
+++ b/godtools/godtools-ios-api/config.plist
@@ -9,10 +9,10 @@
 	<key>errbit_api_key</key>
 	<string>samp</string>
 	<key>godtools_api_key</key>
-	<string>f08a9cb802dc97858b8929e95a44de5f2f541df5</string>
+	<string></string>
 	<key>interpreter_version</key>
 	<integer>1</integer>
 	<key>base_url</key>
-	<string>http://godtoolsapi-stage-1291189452.us-east-1.elb.amazonaws.com/godtools-api/rest/</string>
+	<string>https://api.godtoolsapp.com/godtools-api/rest/</string>
 </dict>
 </plist>
