--- a/godtools/godtools-ios-api/config.plist
+++ b/godtools/godtools-ios-api/config.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>newrelic_api_key</key>
-	<string>samp</string>
+	<string>AA44165c85e735e28b42684455ce9923f7113023c0</string>
 	<key>google_analytics_api_key</key>
-	<string>samp</string>
+	<string>UA-325725-50</string>
 	<key>errbit_api_key</key>
-	<string>samp</string>
+	<string>aa6a3174ec4d5f092f86068b52750daf</string>
 	<key>godtools_api_key</key>
 	<string></string>
 	<key>interpreter_version</key>
