Update Loading screen to use Indigitious logo only (removes Cru logo)  - move to LaunchImage.xib  - provide screen shot image of launch screen for iPhone 5s and under which can run older versions of iOS which still require images.  - same xib file for LaunchImage is used for the "Splash Screen too"  - old splash screen images removed

--- a/godtools/godtools-Info.plist
+++ b/godtools/godtools-Info.plist
@@ -54,6 +54,8 @@
 		<string>NotoSansEthiopic-Regular.ttf</string>
 		<string>NotoSansEthiopic-Bold.ttf</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>GTSplashScreenView</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
